--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-**/target
-*.iml
-*/.idea/workspace.xml
-*/.idea/tasks.xml
 *.iws
-*/.idea.encodings.xml
+*.iml
+*.DS_STORE
+*.bak
+*.thumbs
+
+**/.idea
+**/target
 **/libraries
 **/out
+**/bin
+**/debug
