--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,36 @@
+# Windows backups
 *.DS_STORE
 *.bak
 *.thumbs
 *.db
 
-**/target
-**/out
-**/bin
-**/debug
-**/libraries
+# Java class files
+*.class
 
-*/.idea/workspace.xml
-*/.idea/libraries
+# Generated files
+bin/
+gen/
+out/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log Files
+*.log
+
+# IntelliJ
+*.iml
+.idea/workspace.xml
+.idea/libraries
+
+# Package Files
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
