[NF] Ajout du système d'états pour le joueur

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@ local.properties
 
 # IntelliJ
 *.iml
-.idea/workspace.xml
-.idea/libraries
+**.idea/workspace.xml
+**.idea/libraries
 
 # Package Files
 *.jar
