Modification du fichier gitignore dont on avait perdu les modifications suite au dernier commit

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,9 @@ local.properties
 
 # IntelliJ
 *.iml
-**/.idea
+source/.idea/workspace.xml
+source/.idea/libraries
+source/.idea/shelf
 
 # Package Files
 *.jar
